--- a/resources/js/front/src/App.scss
+++ b/resources/js/front/src/App.scss
@@ -83,7 +83,7 @@ body {
 }
 
 .main {
-  background: #2b5554 url("/img/mi6-seal-bg.png") center center/contain
+  background: #2b5554 url("/images/img/mi6-seal-bg.png") center center/contain
     no-repeat scroll;
   flex-grow: 1;
   display: flex;
